--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -137,7 +137,7 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-push-notification')
+    compile project(':rn-push-android')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile "com.facebook.react:react-native:+"  // From node_modules
