--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'example'
-include ':react-native-push-notification'
-project(':react-native-push-notification').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-push-notification/android')
+include ':rn-push-android'
+project(':rn-push-android').projectDir = new File(rootProject.projectDir, '../node_modules/rn-push-android/android')
 
 include ':app'
