--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "react": "16.4.1",
     "react-native": "0.56.0",
-    "react-native-push-notification": "git+https://git@github.com/zo0r/react-native-push-notification.git"
+    "rn-push-android": "git+https://git@github.com/zo0r/rn-push-android.git"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
